ListView: add new option to style the list-view using CSS grid only: - omit the setting of fixed width for grid cells - add event listener for scrolling to apply scrolling classes - add colspan as a CSS variable for colspan header cells - add mixin to style the grid - add sticky header as a replacement for "fixed rows" (the "regular" fixed rows behavior using overflow property is buggy with the CSS grid setup, maybe due to subgrid) See #71499.

--- a/src/scss/themes/fylr/components/_list-view.scss
+++ b/src/scss/themes/fylr/components/_list-view.scss
@@ -67,6 +67,10 @@
 	.cui-button-href {
 		height: $btn-height; // keep alignment in the row
 	}
+
+	&.use-css-grid-layout {
+		@include list-view-use-css-grid-layout();
+	}
 }
 
 // * Body
@@ -337,6 +341,10 @@
 	// .cui-lv-td {
 	// 	justify-content: flex-end;
 	// }
+
+	.is-scrolling-vertically & {
+		box-shadow: $list-view-scrolling-box-shadow;
+	}
 }
 
 .cui-list-view-grid-inner-bottom {
